optimizer/src/snapshots/qwik_optimizer__js_lib_interface__tests__example_3.snap
---
source: optimizer/src/js_lib_interface.rs
expression: output
---
==INPUT==

import { $, component$ } from '@builder.io/qwik';
export const App = () => {
    const Header = component$(() => {
        console.log("mount");
        return (
            <div onClick={$((ctx) => console.log(ctx))}/>
        );
    });
    return Header;
};


============================= test_example_3.tsx_App_Header_component_div_onClick_PHteWc0iLkc.tsx (ENTRY POINT)==

export const App_Header_component_div_onClick_PHteWc0iLkc = (ctx)=>console.log(ctx);


None
/*
{
  "origin": "test_example_3.tsx",
  "name": "App_Header_component_div_onClick_PHteWc0iLkc",
  "entry": null,
  "displayName": "test_example_3.tsx_App_Header_component_div_onClick",
  "hash": "PHteWc0iLkc",
  "canonicalFilename": "test_example_3.tsx_App_Header_component_div_onClick_PHteWc0iLkc",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    190,
    215
  ]
}
*/
============================= test_example_3.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_PHteWc0iLkc = ()=>import("./test_example_3.tsx_App_Header_component_div_onClick_PHteWc0iLkc");
const i_sugl04P0hM8 = ()=>import("./test_example_3.tsx_App_Header_component_sugl04P0hM8");
export const App = ()=>{
	const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_sugl04P0hM8, "App_Header_component_sugl04P0hM8"));
	return Header;
};


None
============================= test_example_3.tsx_App_Header_component_sugl04P0hM8.tsx (ENTRY POINT)==

import { _jsxSorted, qrl } from "@qwik.dev/core";
const i_PHteWc0iLkc = ()=>import("./test_example_3.tsx_App_Header_component_div_onClick_PHteWc0iLkc");
export const App_Header_component_sugl04P0hM8 = ()=>{
	console.log("mount");
	return /*#__PURE__*/ _jsxSorted("div", { onClick: /*#__PURE__*/ qrl(i_PHteWc0iLkc, "App_Header_component_div_onClick_PHteWc0iLkc") }, null, null, 3, null);
};


None
/*
{
  "origin": "test_example_3.tsx",
  "name": "App_Header_component_sugl04P0hM8",
  "entry": null,
  "displayName": "test_example_3.tsx_App_Header_component",
  "hash": "sugl04P0hM8",
  "canonicalFilename": "test_example_3.tsx_App_Header_component_sugl04P0hM8",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    107,
    236
  ]
}
*/
== DIAGNOSTICS ==

[]
