optimizer/src/snapshots/qwik_optimizer__js_lib_interface__tests__example_4.snap
---
source: optimizer/src/js_lib_interface.rs
expression: output
---
==INPUT==

import { $, component$ } from '@builder.io/qwik';
export function App() {
    const Header = component$(() => {
        console.log("mount");
        return (
            <div onClick={$((ctx) => console.log(ctx))}/>
        );
    });
    return Header;
}

============================= test_example_4.tsx_App_Header_component_div_onClick_DQ3EcJvovFI.tsx (ENTRY POINT)==

export const App_Header_component_div_onClick_DQ3EcJvovFI = (ctx)=>console.log(ctx);


None
/*
{
  "origin": "test_example_4.tsx",
  "name": "App_Header_component_div_onClick_DQ3EcJvovFI",
  "entry": null,
  "displayName": "test_example_4.tsx_App_Header_component_div_onClick",
  "hash": "DQ3EcJvovFI",
  "canonicalFilename": "test_example_4.tsx_App_Header_component_div_onClick_DQ3EcJvovFI",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    187,
    212
  ]
}
*/
============================= test_example_4.tsx_App_Header_component_UNhMB0Ezxn0.tsx (ENTRY POINT)==

import { _jsxSorted, qrl } from "@qwik.dev/core";
const i_DQ3EcJvovFI = ()=>import("./test_example_4.tsx_App_Header_component_div_onClick_DQ3EcJvovFI");
export const App_Header_component_UNhMB0Ezxn0 = ()=>{
	console.log("mount");
	return /*#__PURE__*/ _jsxSorted("div", { onClick: /*#__PURE__*/ qrl(i_DQ3EcJvovFI, "App_Header_component_div_onClick_DQ3EcJvovFI") }, null, null, 3, null);
};


None
/*
{
  "origin": "test_example_4.tsx",
  "name": "App_Header_component_UNhMB0Ezxn0",
  "entry": null,
  "displayName": "test_example_4.tsx_App_Header_component",
  "hash": "UNhMB0Ezxn0",
  "canonicalFilename": "test_example_4.tsx_App_Header_component_UNhMB0Ezxn0",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    104,
    233
  ]
}
*/
============================= test_example_4.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_DQ3EcJvovFI = ()=>import("./test_example_4.tsx_App_Header_component_div_onClick_DQ3EcJvovFI");
const i_UNhMB0Ezxn0 = ()=>import("./test_example_4.tsx_App_Header_component_UNhMB0Ezxn0");
export function App() {
	const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_UNhMB0Ezxn0, "App_Header_component_UNhMB0Ezxn0"));
	return Header;
}


None
== DIAGNOSTICS ==

[]
