optimizer/src/snapshots/qwik_optimizer__js_lib_interface__tests__example_7.snap
---
source: optimizer/src/js_lib_interface.rs
expression: output
---
==INPUT==

import { $, component$ } from '@builder.io/qwik';

export const Header = component$(() => {
    console.log("mount");
    return (
        <div onClick={$((ctx) => console.log(ctx))}/>
    );
});

 const App = component$(() => {
    return (
        <Header/>
    );
});


============================= test_example_7.tsx_test_example_7_App_component_K9kNFzQ86EM.js (ENTRY POINT)==

import { Header } from "./test_example_7";
import { _jsxSorted } from "@qwik.dev/core";
export const test_example_7_App_component_K9kNFzQ86EM = ()=>{
	return _jsxSorted(Header, null, null, null, 3, null);
};


None
/*
{
  "origin": "test_example_7.tsx",
  "name": "test_example_7_App_component_K9kNFzQ86EM",
  "entry": null,
  "displayName": "test_example_7_App_component",
  "hash": "K9kNFzQ86EM",
  "canonicalFilename": "test_example_7.tsx_test_example_7_App_component_K9kNFzQ86EM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    221,
    268
  ]
}
*/
============================= test_example_7.tsx_test_example_7_Header_component_div_onClick_6mjWOatUlUU.js (ENTRY POINT)==

export const test_example_7_Header_component_div_onClick_6mjWOatUlUU = (ctx)=>console.log(ctx);


None
/*
{
  "origin": "test_example_7.tsx",
  "name": "test_example_7_Header_component_div_onClick_6mjWOatUlUU",
  "entry": null,
  "displayName": "test_example_7_Header_component_div_onClick",
  "hash": "6mjWOatUlUU",
  "canonicalFilename": "test_example_7.tsx_test_example_7_Header_component_div_onClick_6mjWOatUlUU",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    155,
    180
  ]
}
*/
============================= test_example_7.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_6mjWOatUlUU = ()=>import("./test_example_7.tsx_test_example_7_Header_component_div_onClick_6mjWOatUlUU");
const i_l6tmRpWLIaw = ()=>import("./test_example_7.tsx_test_example_7_Header_component_l6tmRpWLIaw");
const i_K9kNFzQ86EM = ()=>import("./test_example_7.tsx_test_example_7_App_component_K9kNFzQ86EM");
export const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_l6tmRpWLIaw, "test_example_7_Header_component_l6tmRpWLIaw"));
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_K9kNFzQ86EM, "test_example_7_App_component_K9kNFzQ86EM"));


None
============================= test_example_7.tsx_test_example_7_Header_component_l6tmRpWLIaw.js (ENTRY POINT)==

import { _jsxSorted, qrl } from "@qwik.dev/core";
const i_6mjWOatUlUU = ()=>import("./test_example_7.tsx_test_example_7_Header_component_div_onClick_6mjWOatUlUU");
export const test_example_7_Header_component_l6tmRpWLIaw = ()=>{
	console.log("mount");
	return /*#__PURE__*/ _jsxSorted("div", { onClick: /*#__PURE__*/ qrl(i_6mjWOatUlUU, "test_example_7_Header_component_div_onClick_6mjWOatUlUU") }, null, null, 3, null);
};


None
/*
{
  "origin": "test_example_7.tsx",
  "name": "test_example_7_Header_component_l6tmRpWLIaw",
  "entry": null,
  "displayName": "test_example_7_Header_component",
  "hash": "l6tmRpWLIaw",
  "canonicalFilename": "test_example_7.tsx_test_example_7_Header_component_l6tmRpWLIaw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    84,
    193
  ]
}
*/
== DIAGNOSTICS ==

[]
