optimizer/src/snapshots/qwik_optimizer__js_lib_interface__tests__example_8.snap
---
source: optimizer/src/js_lib_interface.rs
expression: output
---
==INPUT==

import { $, component$ } from '@builder.io/qwik';

export const Header = component$(() => {
    return $((hola) => {
        const hola = this;
        const {something, styff} = hola;
        const hello = hola.nothere.stuff[global];
        return (
            <Header/>
        );
    });
});

============================= ./test_example_8.tsx_Header_component_kw3mgfm0lgA.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
export const Header_component_kw3mgfm0lgA = () => {
	return qrl(() => import("./test_example_8.tsx_Header_component_1_hAK7mEQYxrg.js"), "Header_component_1_hAK7mEQYxrg");
};


None
/*
{
  "origin": "test_example_8.tsx",
  "name": "Header_component_kw3mgfm0lgA",
  "entry": null,
  "displayName": "test_example_8.tsx_Header_component",
  "hash": "kw3mgfm0lgA",
  "canonicalFilename": "test_example_8.tsx_Header_component_kw3mgfm0lgA",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Header_component_kw3mgfm0lgA",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test_example_8.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
export const Header = componentQrl(qrl(() => import("./test_example_8.tsx_Header_component_kw3mgfm0lgA.js"), "Header_component_kw3mgfm0lgA"));


None
============================= ./test_example_8.tsx_Header_component_1_hAK7mEQYxrg.js (ENTRY POINT)==

import { Header } from "./test_example_8";
import { _jsxSorted } from "@qwik.dev/core";
export const Header_component_1_hAK7mEQYxrg = (hola) => {
	const hola = this;
	const { something, styff } = hola;
	const hello = hola.nothere.stuff[global];
	return _jsxSorted(Header, null, null, [], 3, null);
};


None
/*
{
  "origin": "test_example_8.tsx",
  "name": "Header_component_1_hAK7mEQYxrg",
  "entry": null,
  "displayName": "test_example_8.tsx_Header_component_1",
  "hash": "hAK7mEQYxrg",
  "canonicalFilename": "test_example_8.tsx_Header_component_1_hAK7mEQYxrg",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Header_component_1_hAK7mEQYxrg",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
