optimizer/src/snapshots/qwik_optimizer__js_lib_interface__tests__example_capturing_fn_class.snap
---
source: optimizer/src/js_lib_interface.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';

export const App = component$(() => {
    function hola() {
        console.log('hola');
    }
    class Thing {}
    class Other {}

    return $(() => {
        hola();
        new Thing();
        return (
            <div></div>
        )
    });
})
============================= test_example_capturing_fn_class.jsx_App_component_1_sEJrlBvQHzk.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const App_component_1_sEJrlBvQHzk = ()=>{
	hola();
	new Thing();
	return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null);
};


None
/*
{
  "origin": "test_example_capturing_fn_class.js",
  "name": "App_component_1_sEJrlBvQHzk",
  "entry": null,
  "displayName": "test_example_capturing_fn_class.jsx_App_component_1",
  "hash": "sEJrlBvQHzk",
  "canonicalFilename": "test_example_capturing_fn_class.jsx_App_component_1_sEJrlBvQHzk",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    196,
    297
  ]
}
*/
============================= test_example_capturing_fn_class.jsx_App_component_9Afc3zxCXkY.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
export const App_component_9Afc3zxCXkY = ()=>{
	return /*#__PURE__*/ qrl(i_sEJrlBvQHzk, "App_component_1_sEJrlBvQHzk");
};


None
/*
{
  "origin": "test_example_capturing_fn_class.js",
  "name": "App_component_9Afc3zxCXkY",
  "entry": null,
  "displayName": "test_example_capturing_fn_class.jsx_App_component",
  "hash": "9Afc3zxCXkY",
  "canonicalFilename": "test_example_capturing_fn_class.jsx_App_component_9Afc3zxCXkY",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    79,
    301
  ]
}
*/
============================= test_example_capturing_fn_class.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_sEJrlBvQHzk = ()=>import("./test_example_capturing_fn_class.jsx_App_component_1_sEJrlBvQHzk");
const i_9Afc3zxCXkY = ()=>import("./test_example_capturing_fn_class.jsx_App_component_9Afc3zxCXkY");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_9Afc3zxCXkY, "App_component_9Afc3zxCXkY"));


None
== DIAGNOSTICS ==

[
  {
    "category": "error",
    "code": "C02",
    "file": "test_example_capturing_fn_class.jsx",
    "message": "Reference to identifier 'hola' can not be used inside a Qrl($) scope because it's a function",
    "highlights": null,
    "suggestions": null,
    "scope": "optimizer"
  },
  {
    "category": "error",
    "code": "C02",
    "file": "test_example_capturing_fn_class.jsx",
    "message": "Reference to identifier 'Thing' can not be used inside a Qrl($) scope because it's a class",
    "highlights": null,
    "suggestions": null,
    "scope": "optimizer"
  }
]
