optimizer/src/snapshots/qwik_optimizer__js_lib_interface__tests__example_jsx.snap
---
source: optimizer/src/js_lib_interface.rs
expression: output
---
==INPUT==

import { $, component$, h, Fragment } from '@qwik.dev/core';

export const Lightweight = (props) => {
    return (
        <div>
            <>
                <div/>
                <button {...props}/>
            </>
        </div>
    )
};

export const Foo = component$((props) => {
    return $(() => {
        return (
            <div>
                <>
                    <div class="class"/>
                    <div class="class"></div>
                    <div class="class">12</div>
                </>
                <div class="class">
                    <Lightweight {...props}/>
                </div>
                <div class="class">
                    <div/>
                    <div/>
                    <div/>
                </div>
                <div class="class">
                    {children}
                </div>
            </div>
        )
    });
}, {
    tagName: "my-foo",
});
============================= ./test_example_jsx.jsx_Foo_component_pGZPkYSFNjQ.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
export const Foo_component_pGZPkYSFNjQ = (props) => {
	return qrl(() => import("./test_example_jsx.jsx_Foo_component_1_Za18NfgUnDQ.js"), "Foo_component_1_Za18NfgUnDQ", [props]);
};


None
/*
{
  "origin": "test_example_jsx.js",
  "name": "Foo_component_pGZPkYSFNjQ",
  "entry": null,
  "displayName": "test_example_jsx.jsx_Foo_component",
  "hash": "pGZPkYSFNjQ",
  "canonicalFilename": "test_example_jsx.jsx_Foo_component_pGZPkYSFNjQ",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Foo_component_pGZPkYSFNjQ",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= ./test_example_jsx.jsx_Foo_component_1_Za18NfgUnDQ.js (ENTRY POINT)==

import { Lightweight } from "./test_example_jsx.jsx";
import { _jsxSorted, _jsxSplit } from "@qwik.dev/core";
export const Foo_component_1_Za18NfgUnDQ = () => {
	const [props] = useLexicalScope();
	return /* @__PURE__ */ _jsxSorted("div", {}, {}, [
		[
			/* @__PURE__ */ _jsxSorted("div", {}, { class: "class" }, [], 1, null),
			/* @__PURE__ */ _jsxSorted("div", {}, { class: "class" }, [], 1, null),
			/* @__PURE__ */ _jsxSorted("div", {}, { class: "class" }, ["12"], 1, null)
		],
		/* @__PURE__ */ _jsxSorted("div", {}, { class: "class" }, [_jsxSplit(Lightweight, { ...props }, {}, [], 0, null)], 1, null),
		/* @__PURE__ */ _jsxSorted("div", {}, { class: "class" }, [
			/* @__PURE__ */ _jsxSorted("div", {}, {}, [], 1, null),
			/* @__PURE__ */ _jsxSorted("div", {}, {}, [], 1, null),
			/* @__PURE__ */ _jsxSorted("div", {}, {}, [], 1, null)
		], 1, null),
		/* @__PURE__ */ _jsxSorted("div", {}, { class: "class" }, [children], 1, null)
	], 1, null);
};


None
/*
{
  "origin": "test_example_jsx.js",
  "name": "Foo_component_1_Za18NfgUnDQ",
  "entry": null,
  "displayName": "test_example_jsx.jsx_Foo_component_1",
  "hash": "Za18NfgUnDQ",
  "canonicalFilename": "test_example_jsx.jsx_Foo_component_1_Za18NfgUnDQ",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Foo_component_1_Za18NfgUnDQ",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test_example_jsx.js ==

import { _jsxSorted, _jsxSplit, componentQrl, qrl } from "@qwik.dev/core";
export const Lightweight = (props) => {
	return /* @__PURE__ */ _jsxSorted("div", {}, {}, [[/* @__PURE__ */ _jsxSorted("div", {}, {}, [], 1, null), /* @__PURE__ */ _jsxSplit("button", { ...props }, {}, [], 0, null)]], 1, null);
};
export const Foo = componentQrl(qrl(() => import("./test_example_jsx.jsx_Foo_component_pGZPkYSFNjQ.js"), "Foo_component_pGZPkYSFNjQ"));


None
== DIAGNOSTICS ==

[]
